package eu.telecomnancy.flashcards;

public interface Observer
{
    public void reagir();
}