@startuml
package "eu.telecomnancy.flashcards" {
  abstract class "Observable" as eu.telecomnancy.flashcards.Observable {
    +void ajouterObs(String, Observer)
    +void notifierObs(String)
  }
  interface "Observer" as eu.telecomnancy.flashcards.Observer {
    + {abstract}void reagir()
  }
  package "controller" {
    abstract class "AbstractControllerMenu" as eu.telecomnancy.flashcards.controller.AbstractControllerMenu {
      +void quit()
      +void switchToNewCard()
      +void switchToNewDeck()
      +void switchToDeckList()
      +void switchToCardList()
      +void switchToDeckContent(Deck)
      +void switchToLearning(Deck)
      +void switchToParam()
      +void switchToStats()
    }
    class "ControllerCardList" as eu.telecomnancy.flashcards.controller.ControllerCardList {
      +void initialize(URL, ResourceBundle)
      +void displayCards()
      +void addCardToDeck()
      +void switchToModCard()
      +void deleteCard()
      +void reagir()
    }
    class "ControllerDeckContent" as eu.telecomnancy.flashcards.controller.ControllerDeckContent {
      +void initialize(URL, ResourceBundle)
      +void displayCards()
      +void removeCardInDeck()
      +void renameDeck()
      +void reagir()
    }
    class "ControllerDeckList" as eu.telecomnancy.flashcards.controller.ControllerDeckList {
      +void initialize(URL, ResourceBundle)
      +void displayDecks()
      +void deleteDeck(Deck)
      +void accesParam()
      +void reagir()
    }
    class "ControllerLearning" as eu.telecomnancy.flashcards.controller.ControllerLearning {
      +void AffRep(ActionEvent)
      +void Difficile()
      +void Correct()
      +void Revoir()
      +void Facile()
      +void leave()
      +void accesParam()
      +void affTimer()
      +void initialize(URL, ResourceBundle)
      +void reagirAction()
      +void reagir()
      +void quit()
    }
    class "ControllerModCard" as eu.telecomnancy.flashcards.controller.ControllerModCard {
      +TextArea getQuestion()
      +TextArea getAnswer()
      +void accesParam()
      +void initialize(URL, ResourceBundle)
      +void save()
      +void reagir()
    }
    class "ControllerNewCard" as eu.telecomnancy.flashcards.controller.ControllerNewCard {
      +ChoiceBox<String> getMenuDeckChoice()
      +TextArea getQuestion()
      +TextArea getAnswer()
      +void initialize(URL, ResourceBundle)
      +void loadDeckNames()
      +String getSelectedDeck()
      +void addNewCard()
      +void reagir()
    }
    class "ControllerNewDeck" as eu.telecomnancy.flashcards.controller.ControllerNewDeck {
      +void initialize(URL, ResourceBundle)
      +void accesParam()
      +void createDeck()
      +void reagir()
    }
    class "ControllerParam" as eu.telecomnancy.flashcards.controller.ControllerParam {
      +void reagir()
      +void initialize(URL, ResourceBundle)
      +void changingEffect()
      +void applyChange()
    }
    class "ControllerStatistics" as eu.telecomnancy.flashcards.controller.ControllerStatistics {
      +void reagir()
      +void initialize(URL, ResourceBundle)
    }
    class "ViewChanger" as eu.telecomnancy.flashcards.controller.ViewChanger {
      +void setScene(Scene)
      +void addRoot(String, Parent)
      +void setView(String)
    }
  }
  package "model" {
    class "Card" as eu.telecomnancy.flashcards.model.Card {
    }
    class "CardList" as eu.telecomnancy.flashcards.model.CardList {
    }
    class "Deck" as eu.telecomnancy.flashcards.model.Deck {
    }
    class "DeckList" as eu.telecomnancy.flashcards.model.DeckList {
    }
    class "ModelFlashcard" as eu.telecomnancy.flashcards.model.ModelFlashcard {
    }
    class "Param" as eu.telecomnancy.flashcards.model.Param {
    }
  }
  package "sql" {
    class "Initialization" as eu.telecomnancy.flashcards.sql.Initialization {
    }
  }
}
eu.telecomnancy.flashcards.Observable o-- "*" eu.telecomnancy.flashcards.Observer
eu.telecomnancy.flashcards.controller.AbstractControllerMenu .u.|> eu.telecomnancy.flashcards.Observer
eu.telecomnancy.flashcards.controller.AbstractControllerMenu -- "1" eu.telecomnancy.flashcards.model.ModelFlashcard
eu.telecomnancy.flashcards.controller.ControllerCardList --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerDeckContent --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerDeckList --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerLearning --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerModCard --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerNewCard --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerNewDeck --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerParam --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ControllerStatistics --|> eu.telecomnancy.flashcards.controller.AbstractControllerMenu
eu.telecomnancy.flashcards.controller.ViewChanger -u-|> eu.telecomnancy.flashcards.Observable
eu.telecomnancy.flashcards.model.CardList o-- "*" eu.telecomnancy.flashcards.model.Card
eu.telecomnancy.flashcards.model.Deck o-- "*" eu.telecomnancy.flashcards.model.Card
eu.telecomnancy.flashcards.model.DeckList o-- "*" eu.telecomnancy.flashcards.model.Deck
eu.telecomnancy.flashcards.model.ModelFlashcard -- "1" eu.telecomnancy.flashcards.model.DeckList
eu.telecomnancy.flashcards.model.ModelFlashcard -- "1" eu.telecomnancy.flashcards.model.CardList
eu.telecomnancy.flashcards.model.ModelFlashcard --  "1" eu.telecomnancy.flashcards.controller.ViewChanger
eu.telecomnancy.flashcards.model.ModelFlashcard -- "0..1" eu.telecomnancy.flashcards.model.Deck
eu.telecomnancy.flashcards.model.ModelFlashcard -- "0..1" eu.telecomnancy.flashcards.model.Card
eu.telecomnancy.flashcards.model.ModelFlashcard -- "1" eu.telecomnancy.flashcards.model.Param
eu.telecomnancy.flashcards.sql.Initialization -- eu.telecomnancy.flashcards.model.DeckList : chargement du modèle depuis la BDD
eu.telecomnancy.flashcards.sql.Initialization -- eu.telecomnancy.flashcards.model.CardList
eu.telecomnancy.flashcards.sql.Initialization -- eu.telecomnancy.flashcards.model.Param
@enduml
